force-app/main/default/objects/CASH_BOOK__c/CASH_BOOK__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_cashbookOnlineHelp</customHelpPage>
    <label>現金入出</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Cash ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>