force-app/main/default/objects/CASH_BOOK__c/fields/Accountant__c.field-meta.xml
<CustomField>
    <fullName>Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNTANT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CashAccountant</relationshipName>
    <type>Lookup</type>
</CustomField>