force-app/main/default/objects/CASH_BOOK__c/fields/AccountedDate__c.field-meta.xml
<CustomField>
    <fullName>AccountedDate__c</fullName>
    <label>ACCOUNTED DATE</label>
    <type>Date</type>
</CustomField>