force-app/main/default/objects/CASH_BOOK__c/fields/AccoutantFullName__c.field-meta.xml
<CustomField>
    <fullName>AccoutantFullName__c</fullName>
    <label>ACCOUNTANT FULL NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>