force-app/main/default/objects/CASH_BOOK__c/fields/ACTUAL_PAID_TO_VENDOR__c.field-meta.xml
<CustomField>
    <fullName>ACTUAL_PAID_TO_VENDOR__c</fullName>
    <label>ACTUAL PAID TO VENDOR/FROM CUSTOMER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>