force-app/main/default/objects/CASH_BOOK__c/fields/ActualAmountCollected__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountCollected__c</fullName>
    <label>ACTUAL AMOUNT COLLECTED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>