force-app/main/default/objects/CASH_BOOK__c/fields/ActualAmountPaidUSD__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountPaidUSD__c</fullName>
    <label>ACTUAL AMOUNT PAID(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>