force-app/main/default/objects/CASH_BOOK__c/fields/ActualPaidToVendorWording__c.field-meta.xml
<CustomField>
    <fullName>ActualPaidToVendorWording__c</fullName>
    <label>ACTUAL PAID TO VENDOR WORDING</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>