force-app/main/default/objects/CASH_BOOK__c/fields/AdditionalAmountPayToStaffLocal__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAmountPayToStaffLocal__c</fullName>
    <label>ADDITIONAL AMOUNT PAY TO STAFF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>