force-app/main/default/objects/CASH_BOOK__c/fields/AdvancedPayCategory__c.field-meta.xml
<CustomField>
    <fullName>AdvancedPayCategory__c</fullName>
    <label>ADVANCED PAYMENT CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentSourceCategory</valueSetName>
    </valueSet>
</CustomField>