force-app/main/default/objects/CASH_BOOK__c/fields/AMOUNT_ADVANCE_PAID_TO_STAFF__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT_ADVANCE_PAID_TO_STAFF__c</fullName>
    <inlineHelpText>Enter the amount of cash hand over to the staff who carry the cash.</inlineHelpText>
    <label>AMOUNT ADVANCE PAID TO STAFF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>