force-app/main/default/objects/CASH_BOOK__c/fields/AmountAdvancePaidWording__c.field-meta.xml
<CustomField>
    <fullName>AmountAdvancePaidWording__c</fullName>
    <label>AMOUNT ADVANCE PAID WORDING</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>