force-app/main/default/objects/CASH_BOOK__c/fields/CASH_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CASH_STATUS__c</fullName>
    <inlineHelpText>This field is to manage the status of Cash In-and-Out. Must be chosen to submit an approval process.</inlineHelpText>
    <label>CASH STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>FULL AMOUNT RECEIVED</fullName>
            </value>
            <value>
                <fullName>PARTIAL AMOUNT RECEIVED-BALANCE REMAINED</fullName>
            </value>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>BALANCE COLLECTED</fullName>
                <isActive>false</isActive>
                <label>BALANCE COLLECTED</label>
            </value>
            <value>
                <fullName>BALANCE NOT COLLECTED BUT REASON IS ACCEPTABLE</fullName>
                <isActive>false</isActive>
                <label>BALANCE NOT COLLECTED BUT REASON IS ACCEPTABLE</label>
            </value>
            <value>
                <fullName>BALANCE NOT COLLECTED WITHOUT ANY ACCEPTABLE REASON</fullName>
                <isActive>false</isActive>
                <label>BALANCE NOT COLLECTED WITHOUT ANY ACCEPTABLE REASON</label>
            </value>
            <value>
                <fullName>CASH HANDOVERED TO STAFF CARRIER</fullName>
                <isActive>false</isActive>
                <label>CASH HANDOVERED TO STAFF CARRIER</label>
            </value>
            <value>
                <fullName>WAITING FOR BALANCE</fullName>
                <isActive>false</isActive>
                <label>WAITING FOR BALANCE</label>
            </value>
            <value>
                <fullName>WAITING FOR RECEIVING</fullName>
                <isActive>false</isActive>
                <label>WAITING FOR RECEIVING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>