force-app/main/default/objects/CASH_BOOK__c/fields/CashBookInfoInLedger__c.field-meta.xml
<CustomField>
    <fullName>CashBookInfoInLedger__c</fullName>
    <formula>IF( CONTAINS(BankFrom__r.BankInfoInLedger__c, &quot;:--&quot;) = TRUE, &quot;&quot;, BankFrom__r.BankInfoInLedger__c) &amp; IF( CONTAINS(BankTo__r.BankInfoInLedger__c, &quot;:--&quot;) = TRUE, &quot;&quot;, BankTo__r.BankInfoInLedger__c)</formula>
    <label>CASH BOOK INFO IN LEDGER</label>
    <type>Text</type>
</CustomField>