force-app/main/default/objects/CASH_BOOK__c/fields/CashCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>CashCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>CASH (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>CashCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>