force-app/main/default/objects/CASH_BOOK__c/fields/CashInDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>CashInDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH-IN DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>CASH-IN (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>CASHCashInDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>