force-app/main/default/objects/CASH_BOOK__c/fields/CashInDifferenceUSD__c.field-meta.xml
<CustomField>
    <fullName>CashInDifferenceUSD__c</fullName>
    <formula>TotalAmountOfCashInUSD__c -ActualAmountCollectedUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASH-IN DIFFERENCE(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>