force-app/main/default/objects/CASH_BOOK__c/fields/CashPayer__c.field-meta.xml
<CustomField>
    <fullName>CashPayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH PAYER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CASH (CASH PAYER)</relationshipLabel>
    <relationshipName>CashPayer</relationshipName>
    <type>Lookup</type>
</CustomField>