force-app/main/default/objects/CASH_BOOK__c/fields/CashReceiverContact__c.field-meta.xml
<CustomField>
    <fullName>CashReceiverContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH RECEIVER-CONTACT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CashTo__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CASH RECEIVER</relationshipLabel>
    <relationshipName>CashReceiverContact</relationshipName>
    <type>Lookup</type>
</CustomField>