force-app/main/default/objects/CASH_BOOK__c/fields/CashRequestType__c.field-meta.xml
<CustomField>
    <fullName>CashRequestType__c</fullName>
    <label>CASH REQUEST TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Out</fullName>
            </value>
            <value>
                <fullName>Cash In</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>