force-app/main/default/objects/CASH_BOOK__c/fields/CashSourceActivityType__c.field-meta.xml
<CustomField>
    <fullName>CashSourceActivityType__c</fullName>
    <label>CASH SOURCE ACTIVITY TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SourceActivityType</valueSetName>
    </valueSet>
</CustomField>