force-app/main/default/objects/CASH_BOOK__c/fields/CashVoucherRequester__c.field-meta.xml
<CustomField>
    <fullName>CashVoucherRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH VOUCHER REQUESTER</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CashVoucherRequester</relationshipName>
    <type>Lookup</type>
</CustomField>