force-app/main/default/objects/CASH_BOOK__c/fields/CashVourcherRequestTo__c.field-meta.xml
<CustomField>
    <fullName>CashVourcherRequestTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH VOUCHER REQUEST TO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CashVourcherRequestTo</relationshipName>
    <type>Lookup</type>
</CustomField>