force-app/main/default/objects/CASH_BOOK__c/fields/ChiefAccountant__c.field-meta.xml
<CustomField>
    <fullName>ChiefAccountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHIEF ACCOUTANT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CashChiefAccountant</relationshipName>
    <type>Lookup</type>
</CustomField>