force-app/main/default/objects/CASH_BOOK__c/fields/DATE_TIME_BALANCE_COLLECTED__c.field-meta.xml
<CustomField>
    <fullName>DATE_TIME_BALANCE_COLLECTED__c</fullName>
    <label>BALANCE COLLECTED DATE</label>
    <type>DateTime</type>
</CustomField>