force-app/main/default/objects/CASH_BOOK__c/fields/DATE_TIME_HANDOVER_TO_STAFF__c.field-meta.xml
<CustomField>
    <fullName>DATE_TIME_HANDOVER_TO_STAFF__c</fullName>
    <label>CASH TRANSACTION DATE</label>
    <type>DateTime</type>
</CustomField>