force-app/main/default/objects/CASH_BOOK__c/fields/DIFFERENCE_LEFT__c.field-meta.xml
<CustomField>
    <fullName>DIFFERENCE_LEFT__c</fullName>
    <formula>EXPECTED_RETURN_AMOUNT__c  -  RETURNED_AMOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value is automatically calculated.
Difference Left=Expected Return Amount-Returned Amount
In case of Difference Left is greater than 0, please comment into Reason for Difference field.</inlineHelpText>
    <label>DIFFERENCE LEFT(EXPECTED-RETURNED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>