force-app/main/default/objects/CASH_BOOK__c/fields/DifferenceAmountActualCollected__c.field-meta.xml
<CustomField>
    <fullName>DifferenceAmountActualCollected__c</fullName>
    <formula>TotalAmountCashIn__c  -ActualAmountCollected__c</formula>
    <label>DIFFERENCE(TOTAL AMOUNT-COLLECTED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>