force-app/main/default/objects/CASH_BOOK__c/fields/DifferenceLeftUSD__c.field-meta.xml
<CustomField>
    <fullName>DifferenceLeftUSD__c</fullName>
    <formula>ExpectedReturnAmountUSD__c - 	ReturnedAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIFFERENCE LEFT(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>