force-app/main/default/objects/CASH_BOOK__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIRECTOR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CashDirector</relationshipName>
    <type>Lookup</type>
</CustomField>