force-app/main/default/objects/CASH_BOOK__c/fields/DirectorFullName__c.field-meta.xml
<CustomField>
    <fullName>DirectorFullName__c</fullName>
    <label>DIRECTOR FULL NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>