force-app/main/default/objects/CASH_BOOK__c/fields/ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID</label>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipLabel>CASH</relationshipLabel>
    <relationshipName>CASH</relationshipName>
    <type>Lookup</type>
</CustomField>