force-app/main/default/objects/CASH_BOOK__c/fields/EXPECTED_RETURN_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>EXPECTED_RETURN_AMOUNT__c</fullName>
    <formula>AMOUNT_ADVANCE_PAID_TO_STAFF__c  -  ACTUAL_PAID_TO_VENDOR__c</formula>
    <inlineHelpText>The value is automatically calculated.
Expected Return Amount=Amount Advance Paid to Staff - Actual Paid/Collected + Additional Amount Pay to Staff</inlineHelpText>
    <label>EXPECTED RETURN AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>