force-app/main/default/objects/CASH_BOOK__c/fields/mm_CashInCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>mm_CashInCreditAccountingCode__c</fullName>
    <formula>CashInCreditAccountingCode__r.Name</formula>
    <label>MAILMERGE CASH-IN CREDIT ACCOUNTING CODE</label>
    <type>Text</type>
</CustomField>