force-app/main/default/objects/CASH_BOOK__c/fields/mm_CashInDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>mm_CashInDebitAccountingCode__c</fullName>
    <formula>CashInDebitAccountingCode__r.Name</formula>
    <label>MAILMERGE CASH-IN DEBIT ACCOUNTING CODE</label>
    <type>Text</type>
</CustomField>