force-app/main/default/objects/CASH_BOOK__c/fields/mm_CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>mm_CompanyAddress__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Company_Address__c</formula>
    <label>Mail Merge Company Address</label>
    <type>Text</type>
</CustomField>