force-app/main/default/objects/CASH_BOOK__c/fields/mm_LocalCompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>mm_LocalCompanyAddress__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Local_Company_Address__c</formula>
    <label>Mail Merge Local Company Address</label>
    <type>Text</type>
</CustomField>