force-app/main/default/objects/CASH_BOOK__c/fields/OriginalDocument__c.field-meta.xml
<CustomField>
    <fullName>OriginalDocument__c</fullName>
    <label>ORIGINAL DOCUMENT</label>
    <type>TextArea</type>
</CustomField>