force-app/main/default/objects/CASH_BOOK__c/fields/OutboundBankTransactionID__c.field-meta.xml
<CustomField>
    <fullName>OutboundBankTransactionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OUTBOUND BANK TRANSACTION ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BankTransaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Outbound Transaction-Local Currency, Outbound Transaction-USD Currency</value>
        </filterItems>
        <filterItems>
            <field>BankTransaction__c.Currency__c</field>
            <operation>equals</operation>
            <valueField>$Source.Currency__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>INBOUND CASH TRANSACTION</relationshipLabel>
    <relationshipName>CASH</relationshipName>
    <type>Lookup</type>
</CustomField>