force-app/main/default/objects/CASH_BOOK__c/fields/OutboundCashTransactionID__c.field-meta.xml
<CustomField>
    <fullName>OutboundCashTransactionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OUTBOUND CASH TRANSACTION ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CASH_BOOK__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CASH OUT, Outbound Transaction-USD Currency</value>
        </filterItems>
        <filterItems>
            <field>CASH_BOOK__c.Currency__c</field>
            <operation>equals</operation>
            <valueField>$Source.Currency__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipLabel>INBOUND CASH TRANSACTION</relationshipLabel>
    <relationshipName>CASH</relationshipName>
    <type>Lookup</type>
</CustomField>