force-app/main/default/objects/CASH_BOOK__c/fields/PayerAddress__c.field-meta.xml
<CustomField>
    <fullName>PayerAddress__c</fullName>
    <label>PAYER ADDRESS</label>
    <type>TextArea</type>
</CustomField>