force-app/main/default/objects/CASH_BOOK__c/fields/ProcessPayable__c.field-meta.xml
<CustomField>
    <fullName>ProcessPayable__c</fullName>
    <label>PROCESS PAYABLE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>