force-app/main/default/objects/CASH_BOOK__c/fields/REASON_FOR_DIFFERENCE_ER__c.field-meta.xml
<CustomField>
    <fullName>REASON_FOR_DIFFERENCE_ER__c</fullName>
    <label>REASON FOR DIFFERENCE(EXPECTED-RETURNED)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>