force-app/main/default/objects/CASH_BOOK__c/fields/RollupAmountOfInboundDepositLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfInboundDepositLocal__c</fullName>
    <label>ROLLUP AMOUNT OF INBOUND DEPOSIT(LOCAL)</label>
    <summarizedField>DepositCash__c.AmountOfInboundDepositLocalForCash__c</summarizedField>
    <summaryForeignKey>DepositCash__c.Cash__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>