force-app/main/default/objects/CASH_BOOK__c/fields/RollupFMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP FMS UNPAID BAL OF BUYING(LOCAL)</label>
    <summarizedField>ConnectInvoicingAndCash__c.FMSUnpaidBalOfBuyingLocal__c</summarizedField>
    <summaryForeignKey>ConnectInvoicingAndCash__c.Cashbook__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>