force-app/main/default/objects/CASH_BOOK__c/fields/RollupFMSUnpaidBalOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalOfSellingLocal__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>ConnectInvoicingAndCash__c.FMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>ConnectInvoicingAndCash__c.Cashbook__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>