force-app/main/default/objects/CASH_BOOK__c/fields/RollupKickbackUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupKickbackUnpaidBalanceLocal__c</fullName>
    <label>ROLLUP KICKBACK UNPAID BAL(LOCAL)</label>
    <summarizedField>ConnectKickabckCash__c.KickbackUnpaidBalanceLocal__c</summarizedField>
    <summaryForeignKey>ConnectKickabckCash__c.Cashbook__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>