force-app/main/default/objects/CASH_BOOK__c/fields/RollupKickbackUnpaidBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupKickbackUnpaidBalanceUSD__c</fullName>
    <label>ROLLUP KICKBACK UNPAID BAL(USD)</label>
    <summarizedField>ConnectKickabckCash__c.KickbackUnpaidBalanceUSD__c</summarizedField>
    <summaryForeignKey>ConnectKickabckCash__c.Cashbook__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>