force-app/main/default/objects/CASH_BOOK__c/fields/RollupOtherUnpaidBalance__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherUnpaidBalance__c</fullName>
    <label>ROLLUP OTHER UNPAID BAL</label>
    <summarizedField>ConnectOtherCash__c.UnpaidBalanceOfOtherForCash__c</summarizedField>
    <summaryForeignKey>ConnectOtherCash__c.CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>