force-app/main/default/objects/CASH_BOOK__c/fields/RollupOtherUnpaidBalUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherUnpaidBalUSD__c</fullName>
    <label>ROLLUP OTHER UNPAID BAL(USD)</label>
    <summarizedField>ConnectOtherCash__c.UnpaidBalOfOtherUSDCash__c</summarizedField>
    <summaryForeignKey>ConnectOtherCash__c.CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>