force-app/main/default/objects/CASH_BOOK__c/fields/RollupOtherUnreceivedBalance__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherUnreceivedBalance__c</fullName>
    <label>ROLLUP OTHER UNRECEIVED BAL</label>
    <summarizedField>ConnectOtherCash__c.UnreceivedBalanceOfOtherForCash__c</summarizedField>
    <summaryForeignKey>ConnectOtherCash__c.CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>