force-app/main/default/objects/CASH_BOOK__c/fields/RollupPayslipUnpaidBal__c.field-meta.xml
<CustomField>
    <fullName>RollupPayslipUnpaidBal__c</fullName>
    <label>ROLLUP PAYSLIP UNPAID BAL</label>
    <summarizedField>PayslipCash__c.UnpaidBalUnpaidBalOfPayslipCash__c</summarizedField>
    <summaryForeignKey>PayslipCash__c.CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>