force-app/main/default/objects/CASH_BOOK__c/fields/RollUpReceivable__c.field-meta.xml
<CustomField>
    <fullName>RollUpReceivable__c</fullName>
    <label>ROLLUP RECEIVABLE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>