force-app/main/default/objects/CASH_BOOK__c/fields/RollupVATAmountBuyingInclTAX__c.field-meta.xml
<CustomField>
    <fullName>RollupVATAmountBuyingInclTAX__c</fullName>
    <label>ROLLUP VAT AMOUNT BUYING INCL TAX</label>
    <summarizedField>VATCash__c.AmountBuyingInclTaxCash__c</summarizedField>
    <summaryForeignKey>VATCash__c.CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>