force-app/main/default/objects/CASH_BOOK__c/fields/RollupWMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(LOCAL)</label>
    <summarizedField>ConnectBillingCAsh__c.WMSUnpaidBalOfBuyingLocal__c</summarizedField>
    <summaryForeignKey>ConnectBillingCAsh__c.CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>