force-app/main/default/objects/CASH_BOOK__c/fields/RollupWMSUnreceivedSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnreceivedSellingUSD__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL OF SELL(USD)</label>
    <summarizedField>ConnectBillingCAsh__c.WMSUnreceivedBalOfSellingUSD__c</summarizedField>
    <summaryForeignKey>ConnectBillingCAsh__c.CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>