force-app/main/default/objects/CASH_BOOK__c/fields/StartAutoProcessingforTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>StartAutoProcessingforTrxPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Automatic Processing for Trx Plan</label>
    <type>Checkbox</type>
</CustomField>