force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountCashIn__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountCashIn__c</fullName>
    <label>TOTAL AMOUNT OF CASH-IN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>