force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountOfCashinInPrintFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfCashinInPrintFCY__c</fullName>
    <formula>IF(  TotalAmountOfCashInUSD__c  = NULL , TotalAmountOfCashInFCYFormu__c , TotalAmountOfCashInUSD__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cash-In in Print(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>