force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountOfCashinInPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfCashinInPrintLocal__c</fullName>
    <formula>IF( TotalAmountCashIn__c  = NULL , TotalAmountOfCashInLocalFormu__c , TotalAmountCashIn__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cash-In in Print(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>