force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountOfCashInUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfCashInUSD__c</fullName>
    <label>TOTAL AMOUNT OF CASH-IN(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>