force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountOfCashOutFCYFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfCashOutFCYFormu__c</fullName>
    <formula>RollupFMSUnpaidBalOfBuyingUSD__c  +   	RollupWMSUnpaidBalOfBuyingUSD__c	+    RollupKickbackUnpaidBalanceUSD__c	  +   RollupAmountOfOutboundDepositUSD__c	+ 	RollupOtherUnpaidBalUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cash-out(FCY)-Formu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>