force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountOfCashOutInPrintFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfCashOutInPrintFCY__c</fullName>
    <formula>IF( TotalAmountOfCashOutUSD__c  = NULL , TotalAmountOfCashOutFCYFormu__c   , TotalAmountOfCashOutUSD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cash-out in Print(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>