force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountOfCashOutInPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfCashOutInPrintLocal__c</fullName>
    <formula>IF( TotalAmount__c = NULL , TotalAmountOfCashOutLocalFormu__c , TotalAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cash-out in Print(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>