force-app/main/default/objects/CASH_BOOK__c/fields/TotalAmountOfCashOutUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfCashOutUSD__c</fullName>
    <label>TOTAL AMOUNT OF CASH-OUT(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>