force-app/main/default/objects/CASH_BOOK__c/fields/VENDOR_S_INVOICE_OR_EVIDENCE__c.field-meta.xml
<CustomField>
    <fullName>VENDOR_S_INVOICE_OR_EVIDENCE__c</fullName>
    <inlineHelpText>Attach official evidence for proving the amount requiring Cash payment.
Evidence includes Invoice, Receipt, and any other acceptable official letter.</inlineHelpText>
    <label>EVIDENCE FOR CASH TRANSACTION</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>