force-app/main/default/objects/CASH_BOOK__c/recordTypes/CashIn.recordType-meta.xml
<RecordType>
    <fullName>CashIn</fullName>
    <active>true</active>
    <description>To manage cash inbound transaction for local currency</description>
    <label>CASH IN</label>
</RecordType>