force-app/main/default/objects/CASH_BOOK__c/recordTypes/CashOut.recordType-meta.xml
<RecordType>
    <fullName>CashOut</fullName>
    <active>true</active>
    <description>To manage cash outbound transaction for local currency</description>
    <label>CASH OUT</label>
</RecordType>