force-app/main/default/objects/CASH_BOOK__c/recordTypes/CashRequest.recordType-meta.xml
<RecordType>
    <fullName>CashRequest</fullName>
    <active>false</active>
    <description>Request to cash transaction</description>
    <label>CASH REQUEST</label>
</RecordType>