force-app/main/default/objects/CASH_BOOK__c/recordTypes/InboundTransactionUSD.recordType-meta.xml
<RecordType>
    <fullName>InboundTransactionUSD</fullName>
    <active>true</active>
    <description>To manage cash inbound transaction for USD currency</description>
    <label>Inbound Transaction-USD Currency</label>
</RecordType>