force-app/main/default/objects/CASH_BOOK__c/recordTypes/OutboundTransactionUSD_Currency.recordType-meta.xml
<RecordType>
    <fullName>OutboundTransactionUSD_Currency</fullName>
    <active>true</active>
    <description>To manage cash outbound transaction for USD currency</description>
    <label>Outbound Transaction-USD Currency</label>
</RecordType>