force-app/main/default/objects/CASH_BOOK__c/recordTypes/Transaction.recordType-meta.xml
<RecordType>
    <fullName>Transaction</fullName>
    <active>false</active>
    <description>Transaction from one Bank account to Cash</description>
    <label>TRANSACTION</label>
</RecordType>