force-app/main/default/objects/CASH_BOOK__c/validationRules/BALANCE_COLLECTED_LATER_HANDOVER_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>BALANCE_COLLECTED_LATER_HANDOVER_DATE</fullName>
    <active>false</active>
    <errorConditionFormula>DATE_TIME_BALANCE_COLLECTED__c  &lt;  DATE_TIME_HANDOVER_TO_STAFF__c</errorConditionFormula>
    <errorDisplayField>DATE_TIME_BALANCE_COLLECTED__c</errorDisplayField>
    <errorMessage>Balance Collected Date must be later than Handover Date to Staff</errorMessage>
</ValidationRule>